rust_compiler/libs/integration_tests/src/snapshots/integration_tests__function_tests__nested_function_calls.snap
---
source: libs/integration_tests/src/function_tests.rs
expression: output
---
## Unoptimized Output

j main
add:
pop r8
pop r9
push sp
push ra
add r1 r9 r8
move r15 r1
j __internal_L1
__internal_L1:
pop ra
pop sp
j ra
multiply:
pop r8
pop r9
push sp
push ra
mul r1 r9 2
move r15 r1
j __internal_L2
__internal_L2:
pop ra
pop sp
j ra
complex:
pop r8
pop r9
push sp
push ra
push r8
push r9
push r9
push r8
jal add
pop r9
pop r8
move r1 r15
push r8
push r9
push r1
push r1
push 2
jal multiply
pop r1
pop r9
pop r8
move r1 r15
move r15 r1
j __internal_L3
__internal_L3:
pop ra
pop sp
j ra
main:

## Optimized Output

j 43
pop r8
pop r9
push sp
push ra
add r15 r9 r8
pop ra
pop sp
j ra
pop r8
pop r9
push sp
push ra
add r15 r9 r9
pop ra
pop sp
j ra
pop r8
pop r9
push sp
push ra
push r8
push r9
push r9
push r8
jal 1
pop r9
pop r8
move r1 r15
push r8
push r9
push r1
push r1
push 2
jal 9
pop r1
pop r9
pop r8
move r1 r15
move r15 r1
pop ra
pop sp
j ra
