rust_compiler/libs/integration_tests/src/snapshots/integration_tests__function_tests__simple_leaf_function.snap
---
source: libs/integration_tests/src/function_tests.rs
expression: output
---
## Unoptimized Output

j main
test:
push sp
push ra
move r1 10
__internal_L1:
pop ra
pop sp
j ra
main:

## Optimized Output

j 7
push sp
push ra
move r1 10
pop ra
pop sp
j ra
